fixed header z-index

--- a/src/scss/partials/fixed-header.scss
+++ b/src/scss/partials/fixed-header.scss
@@ -2,6 +2,7 @@
     background-color: rgba(25, 25, 25, 0.8);
     height: 100px;
     display: none;
+    z-index: 1;
     
     .heading-logo-link {
         &:hover > .heading-logo {
